# reflight

./: .gitignore  Dockerfile  GAMEPLAN.md  NOTES.md  PROJECT_PLAN.md  README.md  SPRINTS.md  compose.yaml  pyproject.toml
.claude/: launch.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: agent-reliability.yml  ci.yml
docs/: blog-01-failures-should-be-regression-tests.md  blog-02-how-deterministic-replay-works.md  case-study.md  concepts.md  demo-video-script.md  format.md  launch-posts.md  limits.md  portfolio-page.md  quickstart.md
examples/: langgraph_live.py  live_api_check.py
examples/ci_agent/: fleet.py
examples/flaky_agent/: baseline.json  ci_gate.py  fix_demo.py  flaky_model.py  fleet.py  governor_demo.py  judge_accuracy.py  regression_demo.py
examples/quickstart/: agent.py
examples/refund_agent/: fleet.py  refund_model.py  tools.py
examples/research_agent/: fake_model.py  main.py  tools.py
examples/scheduler_live/: case_study.py
examples/warehouse_agent/: fleet.py
runs/: agentscope.db  reflight.db
runs/ci-204/: events.jsonl
runs/ci-211/: events.jsonl
runs/ci-219/: events.jsonl
runs/ci-226/: events.jsonl
runs/ci-233/: events.jsonl
runs/ci-240/: events.jsonl
runs/demo-failure/: events.jsonl
runs/demo-research/: events.jsonl
runs/demo-research/notes/: tokyo-population-halved.md
runs/flaky-00/: events.jsonl
runs/flaky-01/: events.jsonl
runs/flaky-02/: events.jsonl
runs/flaky-02-fixed/: events.jsonl
runs/flaky-03/: events.jsonl
runs/flaky-04/: events.jsonl
runs/flaky-05/: events.jsonl
runs/flaky-06/: events.jsonl
runs/flaky-07/: events.jsonl
runs/flaky-08/: events.jsonl
runs/flaky-09/: events.jsonl
runs/judge-eval/seed-00/: events.jsonl
runs/langgraph-live/: events.jsonl
runs/live-openai/: events.jsonl
runs/quickstart-demo/: events.jsonl
runs/refund-00/: events.jsonl
runs/refund-01/: events.jsonl
runs/refund-02/: events.jsonl
runs/refund-03/: events.jsonl
runs/refund-04/: events.jsonl
runs/refund-05/: events.jsonl
runs/refund-06/: events.jsonl
runs/refund-07/: events.jsonl
runs/refund-08/: events.jsonl
runs/rollup-2026-07-05/: events.jsonl
runs/rollup-2026-07-06/: events.jsonl
runs/rollup-2026-07-07/: events.jsonl
runs/rollup-2026-07-08/: events.jsonl
runs/runaway-breaker/: events.jsonl
runs/runaway-budget/: events.jsonl
runs/sched-000/: events.jsonl
runs/sched-001/: events.jsonl
runs/sched-002/: events.jsonl
runs/sched-003/: events.jsonl
runs/sched-004/: events.jsonl
sdk/agentscope/: __init__.py  classify.py  cli.py  diff.py  events.py  judge.py  recorder.py  replayer.py  server.py  store.py  testing.py
sdk/reflight/: __init__.py  classify.py  cli.py  diff.py  entropy.py  events.py  executor.py  fork.py  governor.py  judge.py  otel.py  pricing.py  pytest_plugin.py  recorder.py  redact.py  reliability.py  replayer.py  schema.py  server.py  store.py  streaming.py
sdk/reflight/adapters/: __init__.py  (+1 more)
tests/: conftest.py  test_entropy.py  test_langchain_adapter.py  test_otel.py  test_parallel_tools.py  test_postgres.py  test_pytest_plugin.py  test_recurrence.py  test_replay_spike.py  test_research_improvements.py  test_server.py  test_sprint1.py  test_sprint3.py  test_sprint4.py  test_sprint5.py  test_sprint6.py  test_sprint7.py  test_sprint8.py  test_streaming.py
ui/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: fdr-panel.tsx  run-view.tsx
ui/lib/: api.ts  static-diff.ts
(+15 files in other folders)
