[project]
name = "reflight"
version = "0.1.0.dev0"
description = "Flight recorder for AI agents: record every run, replay it deterministically, turn failures into regression tests."
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "anthropic>=0.40",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pyyaml>=6",
]

[project.entry-points.pytest11]
reflight = "reflight.pytest_plugin"

[project.scripts]
reflight = "reflight.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sdk/reflight"]

[tool.ruff]
line-length = 100
target-version = "py312"
