[project]
name = "reflight"
version = "0.1.0.dev0"
description = "Flight recorder for AI agents: record every run, replay it deterministically, turn failures into regression tests."
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "anthropic>=0.40",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pyyaml>=6",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]
postgres = [
    "psycopg[binary]>=3.2",
]

[project.entry-points.pytest11]
reflight = "reflight.pytest_plugin"

[project.scripts]
reflight = "reflight.cli:main"

[dependency-groups]
dev = [
    "psycopg[binary]>=3.2",
    "opentelemetry-sdk>=1.27",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.8",
    "pytest>=8",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sdk/reflight"]

[tool.ruff]
line-length = 100
target-version = "py312"
